--- a/pom.xml
+++ b/pom.xml
@@ -58,27 +58,27 @@
 				</executions>
 			</plugin>
 
-			<!-- Dockerfile Maven -->
-			<!-- https://github.com/spotify/dockerfile-maven -->
-			<plugin>
-				<groupId>com.spotify</groupId>
-				<artifactId>dockerfile-maven-plugin</artifactId>
-				<version>1.4.10</version>
-				<executions>
-					<execution>
-						<id>default</id>
-						<goals>
-							<goal>build</goal>
-							<goal>push</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<repository>demoactions/${project.name}</repository>
-					<tag>${project.version}</tag>
-					<skipDockerInfo>true</skipDockerInfo>
-				</configuration>
-			</plugin>
+<!--			&lt;!&ndash; Dockerfile Maven &ndash;&gt;-->
+<!--			&lt;!&ndash; https://github.com/spotify/dockerfile-maven &ndash;&gt;-->
+<!--			<plugin>-->
+<!--				<groupId>com.spotify</groupId>-->
+<!--				<artifactId>dockerfile-maven-plugin</artifactId>-->
+<!--				<version>1.4.10</version>-->
+<!--				<executions>-->
+<!--					<execution>-->
+<!--						<id>default</id>-->
+<!--						<goals>-->
+<!--							<goal>build</goal>-->
+<!--							<goal>push</goal>-->
+<!--						</goals>-->
+<!--					</execution>-->
+<!--				</executions>-->
+<!--				<configuration>-->
+<!--					<repository>demoactions/${project.name}</repository>-->
+<!--					<tag>${project.version}</tag>-->
+<!--					<skipDockerInfo>true</skipDockerInfo>-->
+<!--				</configuration>-->
+<!--			</plugin>-->
 		</plugins>
 	</build>
 
